--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -61,7 +61,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="IO7-nw-6KB">
-                                <rect key="frame" x="16" y="36" width="331" height="392"/>
+                                <rect key="frame" x="16" y="36" width="331" height="400"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="15v-TS-fz7">
                                     <size key="itemSize" width="128" height="128"/>
@@ -177,7 +177,7 @@
                             <constraint firstAttribute="trailing" secondItem="7EA-pY-GDv" secondAttribute="trailing" constant="16" id="Gvn-CG-9NB"/>
                             <constraint firstAttribute="trailing" secondItem="IO7-nw-6KB" secondAttribute="trailing" constant="16" id="H0r-XL-YXz"/>
                             <constraint firstItem="PUa-Dn-Z6k" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="HGg-Jy-ISj"/>
-                            <constraint firstItem="7EA-pY-GDv" firstAttribute="top" secondItem="IO7-nw-6KB" secondAttribute="bottom" constant="8" id="NZo-Xw-G6Z"/>
+                            <constraint firstItem="7EA-pY-GDv" firstAttribute="top" secondItem="IO7-nw-6KB" secondAttribute="bottom" id="NZo-Xw-G6Z"/>
                             <constraint firstAttribute="bottom" secondItem="PUa-Dn-Z6k" secondAttribute="bottom" constant="8" id="PRm-q7-UMl"/>
                             <constraint firstItem="p91-BU-613" firstAttribute="top" secondItem="cQV-oh-YJ4" secondAttribute="top" constant="8" id="QE2-HU-H7c"/>
                             <constraint firstAttribute="trailing" secondItem="p91-BU-613" secondAttribute="trailing" constant="16" id="SG0-YC-wEa"/>
