--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -36,13 +36,16 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="S4G-Fj-x5Z">
-                                                    <rect key="frame" x="101" y="13.666666666666666" width="261" height="23.333333333333336"/>
+                                                    <rect key="frame" x="100.99999999999999" y="13.666666666666664" width="195.66666666666663" height="23"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="23.329999999999998" id="PyN-fr-aqo"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lxf-y1-BwG" customClass="CosmosView" customModule="Cosmos">
-                                                    <rect key="frame" x="101" y="52.999999999999993" width="135" height="25.666666666666664"/>
+                                                    <rect key="frame" x="101" y="52.666666666666657" width="135" height="26"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="starSize">
@@ -61,10 +64,29 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7Jd-Ni-43l">
-                                                    <rect key="frame" x="304.66666666666669" y="37" width="65.333333333333314" height="44"/>
+                                                    <rect key="frame" x="304.66666666666669" y="11" width="65.333333333333314" height="70"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nOb-ff-oOx">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="R8y-8D-6ph">
                                                             <rect key="frame" x="0.0" y="0.0" width="65.333333333333329" height="18"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="8" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="863-oH-XOC">
+                                                                    <rect key="frame" x="0.0" y="1.6666666666666643" width="22" height="15.000000000000004"/>
+                                                                    <color key="tintColor" red="0.79936379189999995" green="0.79947966339999998" blue="0.79933840040000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="18" id="8bh-Es-gjP"/>
+                                                                        <constraint firstAttribute="width" constant="22" id="POX-8V-U3N"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" tag="9" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="gdS-2W-lXc">
+                                                                    <rect key="frame" x="30.000000000000004" y="0.0" width="35.333333333333343" height="18"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nOb-ff-oOx">
+                                                            <rect key="frame" x="0.0" y="26" width="65.333333333333329" height="18"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill.checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="yD8-mt-yX1">
                                                                     <rect key="frame" x="0.0" y="1.9999999999999982" width="22" height="14.666666666666666"/>
@@ -83,7 +105,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="82W-fC-K7Q">
-                                                            <rect key="frame" x="0.0" y="26" width="65.333333333333329" height="18"/>
+                                                            <rect key="frame" x="0.0" y="52" width="65.333333333333329" height="18"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="6" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="386-tN-oMz">
                                                                     <rect key="frame" x="0.0" y="-0.33333333333333215" width="18" height="17.666666666666664"/>
@@ -114,9 +136,9 @@
                                                 <constraint firstItem="DGG-oK-t6V" firstAttribute="centerY" secondItem="jzP-Cg-oUd" secondAttribute="centerY" id="Qq6-Q1-1LD"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="7Jd-Ni-43l" secondAttribute="trailing" id="S1X-iD-5QO"/>
                                                 <constraint firstItem="lxf-y1-BwG" firstAttribute="top" secondItem="S4G-Fj-x5Z" secondAttribute="bottom" constant="16" id="SBA-Oi-4FG"/>
+                                                <constraint firstItem="7Jd-Ni-43l" firstAttribute="leading" secondItem="S4G-Fj-x5Z" secondAttribute="trailing" constant="8" id="TNa-JH-0v2"/>
                                                 <constraint firstItem="S4G-Fj-x5Z" firstAttribute="top" secondItem="DGG-oK-t6V" secondAttribute="top" id="eYQ-69-b1E"/>
-                                                <constraint firstItem="7Jd-Ni-43l" firstAttribute="top" secondItem="S4G-Fj-x5Z" secondAttribute="bottom" id="wEb-rb-lfb"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="S4G-Fj-x5Z" secondAttribute="trailing" constant="8" id="xC6-bb-Qpa"/>
+                                                <constraint firstItem="7Jd-Ni-43l" firstAttribute="top" secondItem="jzP-Cg-oUd" secondAttribute="topMargin" id="xWg-Uw-YPa"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -1708,6 +1730,7 @@
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="person.fill.checkmark" catalog="system" width="128" height="88"/>
         <image name="photo" catalog="system" width="128" height="93"/>
+        <image name="photo.fill" catalog="system" width="128" height="93"/>
         <image name="photo.on.rectangle.fill" catalog="system" width="128" height="96"/>
         <image name="plus.message.fill" catalog="system" width="128" height="113"/>
         <image name="rectangle.fill.on.rectangle.fill" catalog="system" width="128" height="96"/>
