--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -572,8 +572,41 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="alertCell" rowHeight="86" id="sYZ-cd-L0q">
+                                        <rect key="frame" x="0.0" y="208" width="390" height="86"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sYZ-cd-L0q" id="VZS-rl-F8L">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="86"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.triangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="aaW-9a-Ggy">
+                                                    <rect key="frame" x="20" y="24.666666666666664" width="36" height="37"/>
+                                                    <color key="tintColor" systemColor="systemRedColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="36" id="HrW-Ev-cHi"/>
+                                                        <constraint firstAttribute="height" constant="39.329999999999998" id="fNb-cV-i12"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MyB-TF-I7M">
+                                                    <rect key="frame" x="64" y="11" width="306" height="64"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.99724215270000005" green="0.9491520524" blue="0.95216554399999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="MyB-TF-I7M" firstAttribute="top" secondItem="VZS-rl-F8L" secondAttribute="topMargin" id="9fb-Sd-kic"/>
+                                                <constraint firstItem="MyB-TF-I7M" firstAttribute="bottom" secondItem="VZS-rl-F8L" secondAttribute="bottomMargin" id="AcO-9s-S5H"/>
+                                                <constraint firstItem="aaW-9a-Ggy" firstAttribute="leading" secondItem="VZS-rl-F8L" secondAttribute="leadingMargin" id="jKH-5D-pc1"/>
+                                                <constraint firstItem="aaW-9a-Ggy" firstAttribute="centerY" secondItem="VZS-rl-F8L" secondAttribute="centerY" id="mCH-QC-LAr"/>
+                                                <constraint firstItem="MyB-TF-I7M" firstAttribute="trailing" secondItem="VZS-rl-F8L" secondAttribute="trailingMargin" id="rPp-cP-w3g"/>
+                                                <constraint firstItem="MyB-TF-I7M" firstAttribute="leading" secondItem="aaW-9a-Ggy" secondAttribute="trailing" constant="8" symbolic="YES" id="yNe-7O-zGn"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="agregatorsCell" rowHeight="50" id="gLj-8w-r5Q">
-                                        <rect key="frame" x="0.0" y="208" width="390" height="50"/>
+                                        <rect key="frame" x="0.0" y="294" width="390" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gLj-8w-r5Q" id="8gp-IN-v62">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="50"/>
@@ -594,7 +627,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TochkiActivityCell" rowHeight="50" id="guz-oP-9JS">
-                                        <rect key="frame" x="0.0" y="258" width="390" height="50"/>
+                                        <rect key="frame" x="0.0" y="344" width="390" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="guz-oP-9JS" id="byJ-Jt-qes">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="50"/>
@@ -625,7 +658,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="activityPointCell" rowHeight="50" id="o2Z-1i-neE">
-                                        <rect key="frame" x="0.0" y="308" width="390" height="50"/>
+                                        <rect key="frame" x="0.0" y="394" width="390" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="o2Z-1i-neE" id="i3j-1p-CBS">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="50"/>
@@ -679,7 +712,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="lastPostsCell" rowHeight="50" id="QHt-W5-TFC">
-                                        <rect key="frame" x="0.0" y="358" width="390" height="50"/>
+                                        <rect key="frame" x="0.0" y="444" width="390" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QHt-W5-TFC" id="Uv6-OO-T0c">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="50"/>
@@ -719,7 +752,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="koj-j9-MmD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3668" y="2377"/>
+            <point key="canvasLocation" x="-3669.2307692307691" y="2376.5402843601896"/>
         </scene>
         <!--Line View Controller-->
         <scene sceneID="MTm-WZ-QSG">
@@ -1722,6 +1755,7 @@
         <image name="chevron.left" catalog="system" width="96" height="128"/>
         <image name="chevron.right" catalog="system" width="96" height="128"/>
         <image name="exclamationmark.bubble.fill" catalog="system" width="128" height="110"/>
+        <image name="exclamationmark.triangle" catalog="system" width="128" height="112"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="info.circle" catalog="system" width="128" height="121"/>
@@ -1743,6 +1777,9 @@
         </systemColor>
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
