--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -335,8 +335,41 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="alertCell" rowHeight="86" id="cgJ-ze-uJG">
+                                        <rect key="frame" x="0.0" y="323.66666793823242" width="390" height="86"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cgJ-ze-uJG" id="RwO-Dr-6Gm">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="86"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.triangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HRz-cI-4uM">
+                                                    <rect key="frame" x="20" y="24.666666666666664" width="36" height="37"/>
+                                                    <color key="tintColor" systemColor="systemRedColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="36" id="ed2-BP-qpa"/>
+                                                        <constraint firstAttribute="height" constant="39.329999999999998" id="vUh-dW-lP7"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MIU-Lz-LDV">
+                                                    <rect key="frame" x="64" y="11" width="306" height="64"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.99724215270000005" green="0.9491520524" blue="0.95216554399999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="MIU-Lz-LDV" firstAttribute="leading" secondItem="HRz-cI-4uM" secondAttribute="trailing" constant="8" symbolic="YES" id="4Wt-M8-vge"/>
+                                                <constraint firstItem="HRz-cI-4uM" firstAttribute="centerY" secondItem="RwO-Dr-6Gm" secondAttribute="centerY" id="Mmt-s9-j1J"/>
+                                                <constraint firstItem="MIU-Lz-LDV" firstAttribute="trailing" secondItem="RwO-Dr-6Gm" secondAttribute="trailingMargin" id="NVI-wQ-TAf"/>
+                                                <constraint firstItem="HRz-cI-4uM" firstAttribute="leading" secondItem="RwO-Dr-6Gm" secondAttribute="leadingMargin" id="R38-AF-0Yc"/>
+                                                <constraint firstItem="MIU-Lz-LDV" firstAttribute="top" secondItem="RwO-Dr-6Gm" secondAttribute="topMargin" id="RHD-nO-657"/>
+                                                <constraint firstItem="MIU-Lz-LDV" firstAttribute="bottom" secondItem="RwO-Dr-6Gm" secondAttribute="bottomMargin" id="mmR-JC-tTa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="lastPostsCell" rowHeight="50" id="Wio-OD-Xph">
-                                        <rect key="frame" x="0.0" y="323.66666793823242" width="390" height="50"/>
+                                        <rect key="frame" x="0.0" y="409.66666793823242" width="390" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wio-OD-Xph" id="72Q-tb-Tp7">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="50"/>
