--- a/SadAgregator/View/cells/VendorCell/VendTableViewCell.xib
+++ b/SadAgregator/View/cells/VendorCell/VendTableViewCell.xib
@@ -11,23 +11,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="122" id="KGk-i7-Jjw" customClass="VendTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
+            <rect key="frame" x="0.0" y="0.0" width="341" height="122"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
+                <rect key="frame" x="0.0" y="0.0" width="341" height="122"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="qjw-mj-pfX">
-                        <rect key="frame" x="16" y="8" width="296" height="19.5"/>
+                        <rect key="frame" x="20" y="8" width="301" height="19.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ольга Высоцкая" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="6rK-DH-s1f">
-                                <rect key="frame" x="0.0" y="0.0" width="180" height="19.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="185" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="X0u-v3-uZ6">
-                                <rect key="frame" x="196" y="0.0" width="100" height="19.5"/>
+                                <rect key="frame" x="201" y="0.0" width="100" height="19.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="xUn-4P-aqQ"/>
                                 </constraints>
@@ -38,7 +38,7 @@
                         </subviews>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="p37-af-azI">
-                        <rect key="frame" x="246.5" y="35.5" width="65.5" height="44"/>
+                        <rect key="frame" x="255.5" y="35.5" width="65.5" height="44"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FYz-bo-vYd">
                                 <rect key="frame" x="0.0" y="0.0" width="65.5" height="18"/>
@@ -81,11 +81,11 @@
                         </subviews>
                     </stackView>
                     <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7tu-uR-bDH">
-                        <rect key="frame" x="16" y="35.5" width="222.5" height="77.5"/>
+                        <rect key="frame" x="20" y="35.5" width="227.5" height="77.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tableView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4wW-on-pIP">
-                        <rect key="frame" x="0.0" y="121" width="320" height="1"/>
+                        <rect key="frame" x="0.0" y="121" width="341" height="1"/>
                         <color key="backgroundColor" red="0.86005309133818653" green="0.86005309133818653" blue="0.86005309133818653" alpha="0.7731075665808671" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="dng-bg-Omu"/>
@@ -95,15 +95,15 @@
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="p37-af-azI" firstAttribute="top" secondItem="qjw-mj-pfX" secondAttribute="bottom" constant="8" id="1aq-PF-6xU"/>
+                    <constraint firstItem="qjw-mj-pfX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="74Y-4G-FpS"/>
                     <constraint firstItem="4wW-on-pIP" firstAttribute="top" secondItem="7tu-uR-bDH" secondAttribute="bottom" constant="8" id="MWJ-Il-7W7"/>
                     <constraint firstAttribute="bottom" secondItem="4wW-on-pIP" secondAttribute="bottom" id="NFI-IB-hJc"/>
-                    <constraint firstItem="qjw-mj-pfX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="NsD-bb-m8k"/>
                     <constraint firstItem="7tu-uR-bDH" firstAttribute="top" secondItem="qjw-mj-pfX" secondAttribute="bottom" constant="8" id="PyR-hc-dRV"/>
-                    <constraint firstAttribute="trailing" secondItem="qjw-mj-pfX" secondAttribute="trailing" constant="8" id="RFi-tW-Ruu"/>
-                    <constraint firstItem="7tu-uR-bDH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="RQd-Hx-GbI"/>
                     <constraint firstItem="p37-af-azI" firstAttribute="leading" secondItem="7tu-uR-bDH" secondAttribute="trailing" constant="8" id="VKM-FN-xpH"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="p37-af-azI" secondAttribute="trailing" id="Vy1-Yl-75s"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="qjw-mj-pfX" secondAttribute="trailing" id="eTp-2X-Luj"/>
                     <constraint firstItem="4wW-on-pIP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hEv-d6-SQ1"/>
-                    <constraint firstAttribute="trailing" secondItem="p37-af-azI" secondAttribute="trailing" constant="8" id="oPx-XZ-Gc8"/>
+                    <constraint firstItem="7tu-uR-bDH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="n2P-De-oDm"/>
                     <constraint firstItem="qjw-mj-pfX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qlz-EA-4xc"/>
                     <constraint firstAttribute="trailing" secondItem="4wW-on-pIP" secondAttribute="trailing" id="xlK-oi-PHE"/>
                 </constraints>
@@ -118,7 +118,7 @@
                 <outlet property="revLabel" destination="wi1-av-ON1" id="vxt-BL-tFs"/>
                 <outlet property="tableView" destination="7tu-uR-bDH" id="d1F-Ah-3eA"/>
             </connections>
-            <point key="canvasLocation" x="73.913043478260875" y="133.92857142857142"/>
+            <point key="canvasLocation" x="89.130434782608702" y="133.92857142857142"/>
         </tableViewCell>
     </objects>
     <resources>
